2002-10-06  Marcus Brinkmann  <marcus@gnu.org>

	* main.c (diskfs_server_version): Set to HURD_VERSION.

	* dir.c (dirscanblock): Always emulate "." and ".." for the root
	dir, even on FAT32.
	(diskfs_get_directs): Likewise.  New variable DOTDOT.  Set EP to
	DOT or DOTDOT when approriate.  Implement inode number generation
	with vi_rlookup.
	Submitted by Marco Gerards <mg@friaco.nl>.

	* main.c (fetch_root): Implement this for FAT32.
	Submitted by Marco Gerards <mg@friaco.nl>.

	* fatfs.h: Renamed prototype from fat_next_cluster to
	fat_get_next_cluster.
	* fat.c (fat_extend_chain): Replace CLUSTERS_PER_CHAIN with
	CLUSTERS_PER_TABLE and LOG2_CLUSTERS_PER_CHAIN with
	LOG2_CLUSTERS_PER_TABLE.
	(fat_getcluster): Likewise.
	(fat_truncate_node): Likewise.
	Submitted by Marco Gerards <mg@friaco.nl>.

	* fat.c (fat_get_freespace): New function.
	* fat.h: New prototype for fat_get_freespace.
	* inode.c (diskfs_set_statfs): Set ST->f_bfree and ST->f_bavail.
	Submitted by Marco Gerards <mg@friaco.nl>.

	* fatfs.h: New prototypes for fs_uid and fs_gid.
	New prototype for refresh_node_stats.
	* inode.c (read_node): Set ST->st_uid to fs_uid and ST->st_gid to
	fs_gid.
	(refresh_node_stats): New function.
	* main.c: New variables default_fs_uid, default_fs_gid, fs_uid, fs_gid.
	Include <argz.h>
	(options): New variable.
	(startup_children): Likewise.
	(startup_argp): Likewise.
	(runtime_children): Likewise.
	(runtime_argp): Likewise.
	(diskfs_runtime_argp): Likewise.
	(parse_opt): New function.
	(main): Set default_fs_uid, default_fs_gid, fs_uid and fs_gid.
	Pass startup_argp to diskfs_init_main.
	Submitted by Marco Gerards <mg@friaco.nl>.

	* main.c (read_sblock): Move to ...
	* fat.c (read_sblock): ... here and rename to fat_read_sblock.  New
	variable READ.  Don't use disk_image but access store directly.
	(fat_read_sblock): Remove check for large clusters.
	* fat.c: Include <time.h>
	Submitted by Marco Gerards <mg@friaco.nl>.
	